--- a/xxx/index.html
+++ b/xxx/index.html
@@ -6,8 +6,12 @@
     <script src="jquery-1.9.1.js" type="text/javascript"></script>
     <script src="underscore.js" type="text/javascript"></script>
 
+    <!-- Includi prima snake.js e controller.js -->
     <script type="text/javascript" src="snake.js"></script>
     <script type="text/javascript" src="controller.js"></script>
+
+    <!-- Poi includi botLogic.js -->
+    <script type="text/javascript" src="botLogic.js"></script>
   </head>
   <body>
     <div style="padding-left: 30%">
