--- a/xxx/index.html
+++ b/xxx/index.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="controller.js"></script>
 
     <!-- Poi includi botLogic.js -->
-    <script type="text/javascript" src="botLogic.js"></script>
+    <script type="text/javascript" src="BotLogic.js"></script>
   </head>
   <body>
     <div style="padding-left: 30%">
