--- a/xxx/index.html
+++ b/xxx/index.html
@@ -9,6 +9,9 @@
     <!-- Includi prima snake.js e controller.js -->
     <script type="text/javascript" src="snake.js"></script>
     <script type="text/javascript" src="controller.js"></script>
+    
+    <!-- Includi il nuovo file bot.js -->
+    <script type="text/javascript" src="bot.js"></script>
   </head>
   <body>
     <div style="padding-left: 30%">
