--- a/xxx/index.html
+++ b/xxx/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <title>Snake</title>
@@ -6,11 +7,8 @@
     <script src="jquery-1.9.1.js" type="text/javascript"></script>
     <script src="underscore.js" type="text/javascript"></script>
 
-    <!-- Includi prima snake.js e controller.js -->
     <script type="text/javascript" src="snake.js"></script>
     <script type="text/javascript" src="controller.js"></script>
-    
-    <!-- Includi il nuovo file bot.js -->
     <script type="text/javascript" src="bot.js"></script>
   </head>
   <body>
